resolve merge conflict

--- a/codebook/6_Math/Generating_function.tex
+++ b/codebook/6_Math/Generating_function.tex
@@ -25,5 +25,6 @@ $A(x) = \sum_{i\ge 0} \frac{a_i}{i!}x_i$
     %\itemsep-0.5em
     \item $(1+x)^n           = \sum_{i\ge 0} \binom{n}{i}x^i$
     \item $\frac{1}{(1-x)^n} = \sum_{i\ge 0} \binom{i}{n-1}x^i$
+    \item $S_k = \sum_{x=1}^nx^k$: $S = \sum_{p=0}^\infty x^p = \frac{e^x - e^{x(n+1)}}{1-e^x}$
 \end{itemize}
 \end{itemize}
