--- a/codebook/7_Polynomial/Newton.tex
+++ b/codebook/7_Polynomial/Newton.tex
@@ -5,3 +5,10 @@ $$ F(x) = \sum_{i=0}^{\infty}{\alpha_i(x - \beta)^i} $$
 for $\beta$ being some constant. Polynomial $P$ such that $F(P) = 0$ can be found iteratively. Denote by $Q_k$ the polynomial such that $F(Q_k) = 0 \pmod {x^{2^k}}$, then
 
 $$ Q_{k+1} = Q_k - \frac{F(Q_k)}{F^\prime(Q_k)} \pmod {x^{2^{k+1}}} $$
+
+\begin{itemize}
+    \item $A^{-1}$: $B_{k+1} = B_k(2-AB_k) \mod x^{2^{k+1}}$
+    \item $\ln A$: $(\ln A)' = \frac{A'}{A}$
+    \item $\exp A$: $B_{k+1} = B_k(1 + A - \ln B_k) \mod x^{2^{k+1}}$
+    \item $\sqrt A$: $B_{k+1} = \frac 1 2 (B_k + AB_k^{-1}) \mod x^{2^{k+1}}$
+\end{itemize}
