--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -3,14 +3,14 @@
 %\lstinputlisting{1_Basic/Shell_script.cpp}
 %\subsection{Default code}
 %\lstinputlisting{1_Basic/Default_code.cpp}
-\subsection{vimrc}
-\lstinputlisting{1_Basic/vimrc.cpp}
-\subsection{readchar}
-\lstinputlisting{1_Basic/readchar.cpp}
-\subsection{Black Magic}
-\lstinputlisting{1_Basic/black_magic.cpp}
-% \subsection{Texas hold'em}
-% \lstinputlisting{1_Basic/Texas_holdem.cpp}
+\subsection{.vimrc}
+\lstinputlisting{1_Basic/.vimrc}
+\subsection{pragma}
+\lstinputlisting{1_Basic/pragma.cpp}
+\subsection{PBDS}
+\lstinputlisting{1_Basic/PBDS.cpp}
+\subsection{splitmix64}
+\lstinputlisting{1_Basic/spiltmix64.cpp}
 
 
 \section{Graph}
@@ -26,18 +26,19 @@
 \lstinputlisting{2_Graph/Virtual_Tree.cpp}
 \subsection{Maximum Clique Dyn*} % test by TIOJ 1978, CF 101221 I (World Finals' problem)
 \lstinputlisting{2_Graph/Maximum_Clique_Dyn.cpp} 
-\subsection{Minimum Steiner Tree*} % test by luogu P6192
-\lstinputlisting{2_Graph/MinimumSteinerTree.cpp}
+% \subsection{Minimum Steiner Tree*} % test by luogu P6192
+% \lstinputlisting{2_Graph/MinimumSteinerTree.cpp}
 \subsection{Dominator Tree*} % test by CF 100513 L
 \lstinputlisting{2_Graph/Dominator_Tree.cpp}
-\subsection{Minimum Arborescence*} % test by luogu P4716 
-\lstinputlisting{2_Graph/Minimum_Arborescence_fast.cpp}
+\subsection{DMST} % test by NTUJ 2176
+\lstinputlisting{2_Graph/Minimum_Arborescence.cpp}
+\lstinputlisting{2_Graph/DMST.cpp}
 \subsection{Vizing's theorem*} % test by CF 101933 G
 \lstinputlisting{2_Graph/Vizing.cpp} 
-\subsection{Minimum Clique Cover*} % test by TIOJ 1472
-\lstinputlisting{2_Graph/Minimum_Clique_Cover.cpp}
-\subsection{NumberofMaximalClique*} % test by POJ 2989
-\lstinputlisting{2_Graph/NumberofMaximalClique.cpp}
+% \subsection{Minimum Clique Cover*} % test by TIOJ 1472
+% \lstinputlisting{2_Graph/Minimum_Clique_Cover.cpp}
+% \subsection{NumberofMaximalClique*} % test by POJ 2989
+% \lstinputlisting{2_Graph/NumberofMaximalClique.cpp}
 % \subsection{Theory}
 % \begin{footnotesize}
 % $|$Maximum independent edge set$|=|V|-|$Minimum edge cover$|$\\
@@ -46,14 +47,10 @@
 
 
 \section{Data Structure}
-\subsection{Discrete Trick}
-\lstinputlisting{3_Data_Structure/discrete_trick.cpp}
-\subsection{BIT kth*} % test by CSES 1076
-\lstinputlisting{3_Data_Structure/BIT_kth.cpp}
-\subsection{Interval Container*} % test by kactl stress test
-\lstinputlisting{3_Data_Structure/IntervalContainer.cpp}
-\subsection{Leftist Tree}
-\lstinputlisting{3_Data_Structure/Leftist_Tree.cpp}
+% \subsection{Discrete Trick}
+% \lstinputlisting{3_Data_Structure/discrete_trick.cpp}
+% \subsection{Leftist Tree}
+% \lstinputlisting{3_Data_Structure/Leftist_Tree.cpp}
 \subsection{Heavy light Decomposition}
 \lstinputlisting{3_Data_Structure/Heavy_light_Decomposition.cpp}
 \subsection{Centroid Decomposition*} % test by TIOJ 1171
@@ -64,8 +61,8 @@
 \lstinputlisting{3_Data_Structure/LiChaoST.cpp}
 \subsection{Link cut tree*} % test by luogu P3690
 \lstinputlisting{3_Data_Structure/link_cut_tree.cpp}
-\subsection{KDTree}
-\lstinputlisting{3_Data_Structure/KDTree.cpp}
+% \subsection{KDTree}
+% \lstinputlisting{3_Data_Structure/KDTree.cpp}
 % \subsection{Range Chmin Chmax Add Range Sum*} % test by Lib-Checker Range Chmin Chmax Add Range Sum
 % \lstinputlisting{3_Data_Structure/Range_Chmin_Chmax_Add_Range_Sum.cpp}
 
@@ -100,53 +97,49 @@
 \section{String}
 \subsection{KMP}
 \lstinputlisting{5_String/KMP.cpp}
-\subsection{Z-value*} % test by Lib-Checker Z Algorithm
+\subsection{Z-value} % test by Lib-Checker Z Algorithm
 \lstinputlisting{5_String/Z-value.cpp}
-\subsection{Manacher*} % test by Lib-Checker Enumerate Palindromes
+\subsection{Manacher} % test by Lib-Checker Enumerate Palindromes
 \lstinputlisting{5_String/Manacher.cpp}
-%\subsection{Suffix Array}
-%\lstinputlisting{5_String/Suffix_Array.cpp}
-\subsection{SAIS*} % test by TIOJ 1927
+\subsection{Suffix Array}
+\lstinputlisting{5_String/Suffix_Array.cpp}
+\subsection{SAIS} % test by TIOJ 1927
 \lstinputlisting{5_String/SAIS.cpp}
-\subsection{Aho-Corasick Automatan}
+\subsection{AC Automaton}
 \lstinputlisting{5_String/Aho-Corasick_Automatan.cpp}
 \subsection{Smallest Rotation}
 \lstinputlisting{5_String/Smallest_Rotation.cpp}
 \subsection{De Bruijn sequence*} % test by CF 102001 C
 \lstinputlisting{5_String/De_Bruijn_sequence.cpp}
-\subsection{Extended SAM*} % test by CF 616 C
-\lstinputlisting{5_String/exSAM.cpp}
-\subsection{PalTree*} % test by APIO 2014 palindrome
-\lstinputlisting{5_String/PalTree.cpp}
+% \subsection{Extended SAM*} % test by CF 616 C
+% \lstinputlisting{5_String/exSAM.cpp}
+% \subsection{PalTree*} % test by APIO 2014 palindrome
+% \lstinputlisting{5_String/PalTree.cpp}
 
 
 \section{Math}
-\subsection{ax+by=gcd(only exgcd *)} % exgcd test by NTUJ 110
+\subsection{ExtGCD} % exgcd test by NTUJ 110
 \lstinputlisting{6_Math/ax+by=gcd.cpp}
 \subsection{Floor and Ceil}
 \lstinputlisting{6_Math/floor_ceil.cpp}
-\subsection{Floor Enumeration}
-\lstinputlisting{6_Math/floor_enumeration.cpp}
-\subsection{Mod Min}
-\lstinputlisting{6_Math/ModMin.cpp}
-\subsection{Gaussian integer gcd}
-\lstinputlisting{6_Math/Gaussian_gcd.cpp}
-% \subsection{floor sum*} % test by AtCoder Library Practice Contest C, CF 100920 J
-% \lstinputlisting{6_Math/floor_sum.cpp}
+% \subsection{Gaussian integer gcd}
+% \lstinputlisting{6_Math/Gaussian_gcd.cpp}
+\subsection{floor sum*} % test by AtCoder Library Practice Contest C, CF 100920 J
+\lstinputlisting{6_Math/floor_sum.cpp}
 \subsection{Miller Rabin*} % test by NTUJ 1237
 \lstinputlisting{6_Math/Miller_Rabin.cpp}
 % \subsection{Big number}
 % \lstinputlisting{6_Math/Big_number.cpp}
-%\subsection{Fraction}
-%\lstinputlisting{6_Math/Fraction.cpp}
-\subsection{Simultaneous Equations}
+\subsection{Fraction}
+\lstinputlisting{6_Math/Fraction.cpp}
+\subsection{Linear Equations}
 \lstinputlisting{6_Math/Simultaneous_Equations.cpp}
 \subsection{Pollard Rho*} % test by Lib-Checker Factorize
 \lstinputlisting{6_Math/Pollard_Rho.cpp}
-\subsection{Simplex Algorithm}
-\lstinputlisting{6_Math/Simplex_Algorithm.cpp}
-\subsubsection{Construction}
-\input{6_Math/SimplexConstruction.tex}
+% \subsection{Simplex Algorithm}
+% \lstinputlisting{6_Math/Simplex_Algorithm.cpp}
+% \subsubsection{Construction}
+% \input{6_Math/SimplexConstruction.tex}
 %\subsection{Schreier-Sims Algorithm*} % test by XVI Opencup GP of Ekaterinburg H
 %\lstinputlisting{6_Math/SchreierSims.cpp}
 \subsection{chineseRemainder}
@@ -175,17 +168,13 @@
 \input{6_Math/Generating_function.tex}
 
 \section{Polynomial}
-\subsection{Fast Fourier Transform}
-\lstinputlisting{7_Polynomial/Fast_Fourier_Transform.cpp}
-\subsection{Number Theory Transform*} % test by Lib-Checker Convolution
-\lstinputlisting{7_Polynomial/Number_Theory_Transform.cpp}
+\subsection{NTT/FFT}
+\lstinputlisting{7_Polynomial/NTT.cpp}
 \subsection{Fast Walsh Transform*} % test by luogu P6097
 \lstinputlisting{7_Polynomial/Fast_Walsh_Transform.cpp}
 \subsection{Polynomial Operation}
 \lstinputlisting{7_Polynomial/Polynomial_Operation.cpp}
-\subsection{Value Polynomial}
-\lstinputlisting{7_Polynomial/Value_Poly.cpp}
-\subsection{Newton's Method}
+\subsection{Newton's Method + Misc GF}
 \input{7_Polynomial/Newton.tex}
 
 \section{Geometry}
@@ -229,20 +218,36 @@
 \lstinputlisting{8_Geometry/Intersection_of_polygon_and_circle.cpp}
 \subsection{Intersection of line and circle*} % test by kactl stress-tests
 \lstinputlisting{8_Geometry/Intersection_of_line_and_circle.cpp}
-\subsection{Tangent line of two circles}
-\lstinputlisting{8_Geometry/Tangent_line_of_two_circles.cpp}
+% \subsection{point in circle}
+% \lstinputlisting{8_Geometry/point_in_circle.cpp}
+\subsection{Half plane intersection*} % test by qoj 2162 (World Finals' problem)
+\lstinputlisting{8_Geometry/Half_plane_intersection.cpp}
 \subsection{CircleCover*} % test by TIOJ 1503
 \lstinputlisting{8_Geometry/CircleCover.cpp}
-\subsection{3Dpoint*} % test by HDU 3662
-\lstinputlisting{8_Geometry/3Dpoint.cpp}
-\subsection{Convexhull3D*} % test by HDU 3662, Ptz. Summer 2023 olmrgcsi And His Friends' Contest K
-\lstinputlisting{8_Geometry/Convexhull3D.cpp}
-\subsection{DelaunayTriangulation*} % test by Zerojudge b370, TIOJ 1310
-\lstinputlisting{8_Geometry/DelaunayTriangulation_dq.cpp}
-\subsection{Triangulation Vonoroi*} % test by CF 104555 J, NPSC 2018 territory
-\lstinputlisting{8_Geometry/Triangulation_Vonoroi.cpp}
-\subsection{Minkowski Sum*} % test by Zerojudge b398
-\lstinputlisting{8_Geometry/Minkowski_Sum.cpp}
+% \subsection{3Dpoint*} % test by HDU 3662
+% \lstinputlisting{8_Geometry/3Dpoint.cpp}
+% \subsection{Convexhull3D*} % test by HDU 3662, Ptz. Summer 2023 olmrgcsi And His Friends' Contest K
+% \lstinputlisting{8_Geometry/Convexhull3D.cpp}
+% \subsection{DelaunayTriangulation*} % test by Zerojudge b370
+% \lstinputlisting{8_Geometry/DelaunayTriangulation.cpp}
+% \subsection{Triangulation Vonoroi*} % test by NPSC 2018 territory
+% \lstinputlisting{8_Geometry/Triangulation_Vonoroi.cpp}
+\subsection{Tangent line of two circles}
+\lstinputlisting{8_Geometry/Tangent_line_of_two_circles.cpp}
+\subsection{minMaxEnclosingRectangle*} % test by UVA 819
+\lstinputlisting{8_Geometry/minMaxEnclosingRectangle.cpp}
+\subsection{PointSegDist}
+\lstinputlisting{8_Geometry/PointSegDist.cpp}
+\subsection{PointInConvex*} % test by CF 104114 B, CF 101242 J (World Finals' problem)
+\lstinputlisting{8_Geometry/PointInConvex.cpp}
+\subsection{TangentPointToHull*} % test by CF 104114 B, CF 101242 J (World Finals' problem)
+\lstinputlisting{8_Geometry/TangentPointToHull.cpp}
+\subsection{VectorInPoly*} % test by qoj 5479
+\lstinputlisting{8_Geometry/Vector_in_poly.cpp}
+% \subsection{Minkowski Sum*} % test by Zerojudge b398
+% \lstinputlisting{8_Geometry/Minkowski_Sum.cpp}
+\subsection{RotatingSweepLine}
+\lstinputlisting{8_Geometry/rotatingSweepLine.cpp}
 
 \section{Else}
 \subsection{Cyclic Ternary Search*} % test by local brute force
@@ -257,28 +262,22 @@
 \lstinputlisting{9_Else/HilbertCurve.cpp}
 \subsection{DynamicConvexTrick*} % test by TIOJ 1921
 \lstinputlisting{9_Else/DynamicConvexTrick.cpp}
+\subsection{Stern-Brocot Tree*}
+\input{9_Else/SBTree.tex}
 %\subsection{cyclicLCS}
 %\lstinputlisting{9_Else/cyclicLCS.cpp}
-\subsection{All LCS*} % test by Library Checker prefix-substring LCS
-\lstinputlisting{9_Else/All_LCS.cpp}
-\subsection{DLX*} % test by TIOJ 1333, 1381
-\lstinputlisting{9_Else/DLX.cpp}
-\subsection{Matroid Intersection}
-\input{9_Else/Matroid.tex}
-\subsection{AdaptiveSimpson*} % test by CF 101193J, 100553D
-\lstinputlisting{9_Else/AdaptiveSimpson.cpp}
-\subsection{Simulated Annealing}
-\lstinputlisting{9_Else/simulated_annealing.cpp}
-\subsection{Tree Hash*} % test by CSES Tree Isomorphism I
-\lstinputlisting{9_Else/tree_hash.cpp}
-\subsection{Binary Search On Fraction}
-\lstinputlisting{9_Else/BinarySearchOnFraction.cpp}
-\subsection{Min Plus Convolution*} % test by Library Checker Min Plus Convolution (Convex and Arbitrary)
-\lstinputlisting{9_Else/min_plus_convolution.cpp}
-\subsection{Bitset LCS}
-\lstinputlisting{9_Else/BitsetLCS.cpp}
-\subsection{N Queens Problem}
-\lstinputlisting{9_Else/NQueens.cpp}
+% \subsection{All LCS*} % test by Library Checker prefix-substring LCS
+% \lstinputlisting{9_Else/All_LCS.cpp}
+% \subsection{DLX*} % test by TIOJ 1333, 1381
+% \lstinputlisting{9_Else/DLX.cpp}
+% \subsection{Matroid Intersection}
+% \input{9_Else/Matroid.tex}
+% \subsection{AdaptiveSimpson}
+% \lstinputlisting{9_Else/AdaptiveSimpson.cpp}
+% \subsection{Simulated Annealing}
+% \lstinputlisting{9_Else/simulated_annealing.cpp}
+% \subsection{Tree Hash*} % test by CSES Tree Isomorphism I
+% \lstinputlisting{9_Else/tree_hash.cpp}
 \section{Python}
 \subsection{Misc}
 \lstinputlisting[language=Python]{11_Python/misc.py}
