--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -16,6 +16,8 @@
 	\lstinputlisting[firstline=2]{2_Graph/Maximum_Clique_Dyn.cpp}
 	\subsection{MinimumSteinerTree}
 	\lstinputlisting[firstline=2]{2_Graph/MinimumSteinerTree.cpp}
+	\subsection{DMST(slow)}
+	\lstinputlisting[firstline=2]{2_Graph/Minimum_Arborescence.cpp}
 	\subsection{DMST}
 	\lstinputlisting[firstline=2]{2_Graph/DMST.cpp}
 	\subsection{VizingTheorem}
@@ -159,6 +161,8 @@
 	\lstinputlisting[firstline=2]{8_Geometry/DelaunayTriangulation.cpp}
 	\subsection{VonoroiDiagram}
 	\lstinputlisting[firstline=2]{8_Geometry/Triangulation_Vonoroi.cpp}
+	\subsection{3DConeDistance}
+	\lstinputlisting[firstline=2]{8_Geometry/3DConeDist.cpp}
 \section{Misc}
 	\subsection{MoAlgoWithModify}
 	\lstinputlisting[firstline=2]{9_Else/Mos_Algorithm_With_modification.cpp}
