--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -84,11 +84,6 @@
 	\lstinputlisting[firstline=2]{6_Math/Pollard_Rho.cpp}
 	\subsection{Fraction}
 	\lstinputlisting[firstline=2]{6_Math/Fraction.cpp}
-	\subsection{Simplex}
-	\input{6_Math/SimplexConstruction.tex}
-	\lstinputlisting[firstline=2]{6_Math/Simplex.cpp}
-	\subsection{GuassianElimination}
-	\lstinputlisting[firstline=2]{6_Math/Simultaneous_Equations.cpp}
 	\subsection{ChineseRemainder}
 	\lstinputlisting[firstline=2]{6_Math/chineseRemainder.cpp}
 	\subsection{FactorialMod$p^k$}
@@ -99,8 +94,6 @@
 	\lstinputlisting[firstline=2]{6_Math/PiCount.cpp}
 	\subsection{DiscreteLog}
 	\lstinputlisting[firstline=2]{6_Math/DiscreteLog.cpp}
-	\subsection{BerlekampMassey}
-	\lstinputlisting[firstline=2]{6_Math/Berlekamp-Massey.cpp}
 	\subsection{Theorems}
 	\input{6_Math/Theorem.tex}
 	\subsection{Estimation}
@@ -109,8 +102,16 @@
 	\input{6_Math/Euclidean.tex}
 	\subsection{Numbers}
 	\input{6_Math/numbers.tex}
-	\subsection{GenerationFunctions}
+	\subsection{GeneratingFunctions}
 	\input{6_Math/Generating_function.tex}
+\section{Linear Algebra}
+	\subsection{GuassianElimination}
+	\lstinputlisting[firstline=2]{6_Math/Simultaneous_Equations.cpp}
+	\subsection{BerlekampMassey}
+	\lstinputlisting[firstline=2]{6_Math/Berlekamp-Massey.cpp}
+	\subsection{Simplex}
+	\input{6_Math/SimplexConstruction.tex}
+	\lstinputlisting[firstline=2]{6_Math/Simplex.cpp}
 \section{Polynomials}
 	\subsection{NTT (FFT)}
 	\lstinputlisting[firstline=2]{7_Polynomial/NTT.cpp}
