--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -29,6 +29,8 @@
 	\subsection{Theorems}
 	\input{2_Graph/graph.tex}
 \section{Flow-Matching}
+	\subsection{HopcroftKarp}
+	\lstinputlisting[firstline=2]{4_Flow_Matching/Hopcroft-Karp.cpp}
 	\subsection{KM}
 	\lstinputlisting[firstline=2]{4_Flow_Matching/Kuhn_Munkres.cpp}
 	\subsection{MCMF}
@@ -144,6 +146,8 @@
 	\lstinputlisting[firstline=2]{8_Geometry/Intersection_of_two_circles.cpp}
 	\subsection{PolyIntersectCirc}
 	\lstinputlisting[firstline=2]{8_Geometry/Intersection_of_polygon_and_circle.cpp}
+	\subsection{MinkowskiSum}
+	\lstinputlisting[firstline=2]{8_Geometry/Minkowski_Sum.cpp}
 	\subsection{MinMaxEnclosingRect}
 	\lstinputlisting[firstline=2]{8_Geometry/minMaxEnclosingRectangle.cpp}
 	\subsection{MinEnclosingCircle}
