--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -14,8 +14,6 @@
 	\lstinputlisting[firstline=2]{2_Graph/MinimumMeanCycle.cpp}
 	\subsection{MaximumCliqueDyn}
 	\lstinputlisting[firstline=2]{2_Graph/Maximum_Clique_Dyn.cpp}
-	\subsection{MinimumSteinerTree}
-	\lstinputlisting[firstline=2]{2_Graph/MinimumSteinerTree.cpp}
 	\subsection{DMST(slow)}
 	\lstinputlisting[firstline=2]{2_Graph/Minimum_Arborescence.cpp}
 	\subsection{DMST}
@@ -154,6 +152,8 @@
 	\lstinputlisting[firstline=2]{8_Geometry/Minimum_Enclosing_Circle.cpp}
 	\subsection{CircleCover}
 	\lstinputlisting[firstline=2]{8_Geometry/CircleCover.cpp}
+	\subsection{LineCmp}
+	\lstinputlisting[firstline=2]{8_Geometry/LineCmp.cpp}
 	\subsection{Trapezoidalization}
 	\lstinputlisting[firstline=2]{8_Geometry/Trapezoidalization.cpp}
 	\subsection{TriangleHearts}
@@ -166,8 +166,6 @@
 	\lstinputlisting[firstline=2]{8_Geometry/DelaunayTriangulation.cpp}
 	\subsection{VonoroiDiagram}
 	\lstinputlisting[firstline=2]{8_Geometry/Triangulation_Vonoroi.cpp}
-	\subsection{3DConeDistance}
-	\lstinputlisting[firstline=2]{8_Geometry/3DConeDist.cpp}
 \section{Misc}
 	\subsection{MoAlgoWithModify}
 	\lstinputlisting[firstline=2]{9_Else/Mos_Algorithm_With_modification.cpp}
@@ -187,3 +185,5 @@
 	\lstinputlisting[firstline=2]{9_Else/simulated_annealing.cpp}
 	\subsection{Python}
 	\lstinputlisting[firstline=2]{11_Python/misc.py}
+	\subsection{LineContainer}
+	\lstinputlisting[firstline=2]{9_Else/LineContainer.cpp}
