--- a/codebook/2_Graph/graph.tex
+++ b/codebook/2_Graph/graph.tex
@@ -1,2 +1,3 @@
-$|$Maximum independent edge set$|=|V|-|$Minimum edge cover$|$\\
-$|$Maximum independent set$|=|V|-|$Minimum vertex cover$|$\\
+$|\text{max independent edge set}|=|V|-|\text{min edge cover}|$
+
+$|\text{max independent set}|=|V|-|\text{min vertex cover}|$
