--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -71,7 +71,7 @@
 	\lstinputlisting[firstline=2]{5_String/PalTree.cpp}
 \section{Number Theory}
 	\subsection{Primes}
-	\lstinputlisting[firstline=2]{6_Math/Primes.cpp}
+	\input{6_Math/Primes.tex}
 	\subsection{ExtGCD}
 	\lstinputlisting[firstline=2]{6_Math/ExtGCD.cpp}
 	\subsection{FloorCeil}
@@ -138,6 +138,8 @@
 	\lstinputlisting[firstline=2]{8_Geometry/TangentPointToHull.cpp}
 	\subsection{CircTangentCirc}
 	\lstinputlisting[firstline=2]{8_Geometry/Tangent_line_of_two_circles.cpp}
+	\subsection{LineCircleIntersect}
+	\lstinputlisting[firstline=2]{8_Geometry/Intersection_of_line_and_circle.cpp}
 	\subsection{LineConvexIntersect}
 	\lstinputlisting[firstline=2]{8_Geometry/Intersection_of_line_and_convex.cpp}
 	\subsection{CircIntersectCirc}
