--- a/codebook/codebook.tex
+++ b/codebook/codebook.tex
@@ -87,7 +87,7 @@ stringstyle=\itshape\color{Green4},
 \begin{document}
 \pagestyle{fancy}
 \fancyfoot{}
-\fancyhead[L]{National Taiwan University RngBased (forked from 8BQube)}
+\fancyhead[L]{National Taiwan University | RngBased}
 \fancyhead[R]{\thepage}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\contentsname}{Contents} 
