Add SMAWK and fix stuff

--- a/codebook/codebook.tex
+++ b/codebook/codebook.tex
@@ -2,25 +2,21 @@
 \setlength{\columnsep}{10pt}
 \setlength{\columnseprule}{0pt}
 
-\usepackage{amsthm}								%定義，例題
+\usepackage{amsthm}							
 \usepackage{amssymb}
-%\usepackage[margin=2cm]{geometry}
-\usepackage{fontspec}								%設定字體
+\usepackage{fontspec}								
 \usepackage{color}
 \usepackage[x11names]{xcolor}
-\usepackage{listings}								%顯示code用的
-%\usepackage[Glenn]{fncychap}						%排版，頁面模板
-\usepackage{fancyhdr}								%設定頁首頁尾
-\usepackage{graphicx}								%Graphic
+\usepackage{listings}								
+\usepackage{fancyhdr}								
+\usepackage{graphicx}								
 \usepackage{enumerate}
 \usepackage{multicol}
 \usepackage{titlesec}
 \usepackage{amsmath}
 \usepackage[CheckSingle, CJKmath]{xeCJK}
 \usepackage{savetrees}
-% \usepackage{CJKulem}
 
-%\usepackage[T1]{fontenc}
 \usepackage{amsmath, courier, listings, fancyhdr, graphicx}
 \topmargin=0pt
 \headsep=5pt
@@ -37,10 +33,6 @@
 
 \titlespacing\section{0pt}{0pt plus 2pt minus 2pt}{0pt plus 2pt minus 2pt}
 \titlespacing\subsection{0pt}{0pt plus 2pt minus 2pt}{0pt plus 2pt minus 2pt}
-
-
-%\renewcommand\listfigurename{圖目錄}
-%\renewcommand\listtablename{表目錄} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -76,7 +68,7 @@ captionpos=b,										% sets the caption-position to bottom
 breaklines=true,									% sets automatic line breaking
 breakatwhitespace=false,							% sets if automatic breaks should only happen at whitespace
 escapeinside={\%*}{*)},							% if you want to add a comment within your code
-morekeywords={constexpr},									% if you want to add more keywords to the set
+morekeywords={constexpr,ll},									% if you want to add more keywords to the set
 keywordstyle=\bfseries\color{Blue1},
 commentstyle=\itshape\color{Red4},
 stringstyle=\itshape\color{Green4},
