--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -179,12 +179,12 @@
 	\lstinputlisting[firstline=2]{9_Else/HilbertCurve.cpp}
 	\subsection{SternBrocotTree}
 	\input{9_Else/SBTree.tex}
-	\subsection{CyclicLCS}
-	\lstinputlisting[firstline=2]{9_Else/cyclicLCS.cpp}
 	\subsection{AllLCS}
 	\lstinputlisting[firstline=2]{9_Else/All_LCS.cpp}
 	\subsection{SimulatedAnnealing}
 	\lstinputlisting[firstline=2]{9_Else/simulated_annealing.cpp}
+	\subsection{SMAWK}
+	\lstinputlisting[firstline=2]{9_Else/SMAWK.cpp}
 	\subsection{Python}
 	\lstinputlisting[firstline=2]{11_Python/misc.py}
 	\subsection{LineContainer}
