Update Estimation, SAIS from ckiseki & Sync typo-fix from 8BQube

--- a/codebook/8_Geometry/Formulas.tex
+++ b/codebook/8_Geometry/Formulas.tex
@@ -1,4 +1,17 @@
 \begin{itemize}
+
+\item \textbf{Rotation}
+
+$$
+M(\theta) =
+    \begin{bmatrix}
+        \cos\theta & -\sin\theta\\
+        \sin\theta & \cos\theta
+    \end{bmatrix}
+$$
+
+90 degree: $(x, y) = (Y - y, x)$
+
 \item \textbf{Pick's theorem}
 
 For simple integer-coordinate polygon, 
