--- a/codebook/6_Math/Estimation.tex
+++ b/codebook/6_Math/Estimation.tex
@@ -3,10 +3,33 @@
 
 \begin{itemize}
     %\itemsep-0.5em
-    \item Number of divisors: $100$ for $n < 5\cdot10^4$; $500$ for $n<10^7$; $2000$ for $n<10^{10}$, $200000$;$n<10^{19}$.
-    \item Unordered integer partition: $1, 1, 2, 3, 5, 7, 11, 15, 22, 30$ for $n=0\sim 9$; $627$ for $n=20$; $\sim 2\cdot10^5$ for $n=50$; $\sim 2\cdot10^8$ for $n=100$.
-    \item Ways of partitions of $n$ distinct elements: $B(n)=1, 1, 2, 5, 15, 52, 203, 877, 4140, 21147, 115975, 678570, 4213597,$\\
-    $27644437, 190899322, \ldots$.
+    \item Number of divisors
+    
+    \noindent
+    \begin{tabular}{@{}c|*{20}{c@{\ }}@{}}
+        $n \leq $   & 100 & $10^3$ & $10^6$ & $10^9$ & $10^{12}$ & $10^{15}$ & $10^{18}$ \\
+        \hline
+        $\max d(n)$ & 12 & 32 & 240 & 1344 & 6720 & 26880 & 103680 \\
+    \end{tabular}
+
+    \item Unordered integer partition 
+
+    \noindent
+    \begin{tabular}{@{}c|*{20}{c@{\ }}@{}}
+        $n$    & 2 & 3 & 4 & 5 & 6  & 7  & 8  & 9  & 20  & 30   & 40  & 50  & 100 \\
+        \hline
+        $p(n)$ & 2 & 3 & 5 & 7 & 11 & 15 & 22 & 30 & 627 & 5604 & $4\cdot10^4$ & $2\cdot10^5$ & $2\cdot10^8$ \\
+    \end{tabular}
+
+    \item Ways of partitions of $n$ distinct elements
+
+    \noindent
+    \begin{tabular}{@{}c|*{20}{c@{\ }}@{}}
+      $n$             & 2 & 3  & 4  & 5   & 6   & 7    & 8     & 9 & 10     & 11  & 12  & 13  \\
+                      \hline
+      $B_n$           & 2 & 5 & 15 & 52 & 203 & 877 & 4140 & 21147 & 115975 & $7\cdot10^5$ & $4\cdot10^6$ & $3\cdot10^7$ \\
+    \end{tabular}
+
 \end{itemize}
 
 \end{itemize}
