--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -10,6 +10,8 @@
 	\lstinputlisting[firstline=2]{2_Graph/2SAT.cpp}
 	\subsection{BCC Vertex}
 	\lstinputlisting[firstline=2]{2_Graph/BCC_Vertex.cpp}
+	\subsection(BCC Edge)
+	\lstinoutlisting[firstline=2]{2_Graph/BCC_Edge.cpp}
 	\subsection{MinimumMeanCycle}
 	\lstinputlisting[firstline=2]{2_Graph/MinimumMeanCycle.cpp}
 	\subsection{MaximumCliqueDyn}
