--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -3,7 +3,7 @@
 	\lstinputlisting[firstline=2]{1_Basic/.vimrc}
 	\subsection{PBDS}
 	\lstinputlisting[firstline=2]{1_Basic/PBDS.cpp}
-	\subsection{pargma}
+	\subsection{pragma}
 	\lstinputlisting[firstline=2]{1_Basic/pragma.cpp}
 \section{Graph}
 	\subsection{2SAT/SCC}
