init default code

--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -5,6 +5,8 @@
 	\lstinputlisting[firstline=2]{1_Basic/PBDS.cpp}
 	\subsection{pragma}
 	\lstinputlisting[firstline=2]{1_Basic/pragma.cpp}
+	\subsection{default code}
+	\lstinputlisting[firstline=2]{1_Basic/default.cpp}
 \section{Graph}
 	\subsection{2SAT/SCC}
 	\lstinputlisting[firstline=2]{2_Graph/2SAT.cpp}
