--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -11,7 +11,7 @@
 	\subsection{BCC Vertex}
 	\lstinputlisting[firstline=2]{2_Graph/BCC_Vertex.cpp}
 	\subsection{BCC Edge}
-	\lstinoutlisting[firstline=2]{2_Graph/BCC_Edge.cpp}
+	\lstinputlisting[firstline=2]{2_Graph/BCC_Edge.cpp}
 	\subsection{MinimumMeanCycle}
 	\lstinputlisting[firstline=2]{2_Graph/MinimumMeanCycle.cpp}
 	\subsection{MaximumCliqueDyn}
@@ -54,9 +54,9 @@
 	\lstinputlisting[firstline=2]{3_Data_Structure/link_cut_tree.cpp}
 	\subsection{Treap}
 	\lstinputlisting[firstline=2]{3_Data_Structure/Treap.cpp}
-	\subsection{Centroid_Decomposition}
+	\subsection{CentroidDecomposition}
 	\lstinputlisting[firstline=2]{3_Data_Structure/Centroid_Decomposition.cpp}
-	\subsection{Heavy_light_Decomposition}
+	\subsection{HeavylightDecomposition}
 	\lstinputlisting[firstline=2]{3_Data_Structure/Heavy_light_Decomposition.cpp}
 \section{String}
 	\subsection{KMP}
