--- a/codebook/content_old.tex
+++ b/codebook/content_old.tex
@@ -2,7 +2,7 @@
 %\subsection{Shell script}
 %\lstinputlisting{1_Basic/Shell_script.cpp}
 %\subsection{Default code}
-%\lstinputlisting{1_Basic/Default_code.cpp}
+%\lstinputlisting{1_Basic/GeometryDefaultFloat.h}
 \subsection{.vimrc}
 \lstinputlisting{1_Basic/.vimrc}
 \subsection{pragma}
@@ -179,7 +179,7 @@
 
 \section{Geometry}
 \subsection{Default Code}
-\lstinputlisting{8_Geometry/Default_code.cpp}
+\lstinputlisting{8_Geometry/GeometryDefaultFloat.h}
 \subsection{PointSegDist*} % test by aizu oj CGL_2_D
 \lstinputlisting{8_Geometry/PointSegDist.cpp}
 \subsection{Heart}
