Add Virtual Tree

--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -12,6 +12,8 @@
 	\lstinputlisting[firstline=2]{2_Graph/2SAT.cpp}
 	\subsection{BCC Vertex}
 	\lstinputlisting[firstline=2]{2_Graph/BCC_Vertex.cpp}
+	\subsection{VirtualTree}
+	\lstinputlisting[firstline=2]{2_Graph/Virtual_Tree.cpp}
 	\subsection{MinimumMeanCycle}
 	\lstinputlisting[firstline=1]{2_Graph/MinimumMeanCycle.cpp}
 	\subsection{MaximumCliqueDyn}
