Added MahattanMST (credit to oToToT)

--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -18,6 +18,8 @@
 	\lstinputlisting[firstline=1]{2_Graph/MinimumMeanCycle.cpp}
 	\subsection{MaximumCliqueDyn}
 	\lstinputlisting[firstline=2]{2_Graph/Maximum_Clique_Dyn.cpp}
+	\subsection{MinimumSteinerTree}
+	\lstinputlisting[firstline=2]{2_Graph/MinimumSteinerTree.cpp}
 	\subsection{DominatorTree}
 	\lstinputlisting[firstline=2]{2_Graph/Dominator_Tree.cpp}
 	\subsection{DMST(slow)}
@@ -189,10 +191,14 @@
 	\input{9_Else/Mos_Algorithm.tex}
 	\subsection{HilbertCurve}
 	\lstinputlisting[firstline=2]{9_Else/HilbertCurve.cpp}
+	\subsection{ManhattanMST}
+	\lstinputlisting[firstline=2]{9_Else/ManhattanMST.cpp}
 	\subsection{SternBrocotTree}
 	\input{9_Else/SBTree.tex}
 	\subsection{AllLCS}
 	\lstinputlisting[firstline=2]{9_Else/All_LCS.cpp}
+	\subsection{MatroidIntersection}
+	\input{9_Else/Matroid.tex}
 	\subsection{SimulatedAnnealing}
 	\lstinputlisting[firstline=2]{9_Else/SimulatedAnnealing.cpp}
 	\subsection{SMAWK}
