--- a/codebook/content.tex
+++ b/codebook/content.tex
@@ -1,219 +1,219 @@
 \section{Basic}
-	\subsection{.vimrc}
-	\lstinputlisting[firstline=1]{1_Basic/.vimrc}
-	\subsection{PBDS}
-	\lstinputlisting[firstline=2]{1_Basic/PBDS.cpp}
-	\subsection{pragma}
-	\lstinputlisting[firstline=2]{1_Basic/pragma.cpp}
-	\subsection{Default Code}
-	\lstinputlisting[firstline=2]{1_Basic/default.cpp}
-	\subsection{LambdaCompare}
-	\lstinputlisting[firstline=2]{1_Basic/lambda_cmp.cpp}
+\subsection{.vimrc}
+\lstinputlisting[firstline=1]{1_Basic/.vimrc}
+\subsection{PBDS}
+\lstinputlisting[firstline=2]{1_Basic/PBDS.cpp}
+\subsection{pragma}
+\lstinputlisting[firstline=2]{1_Basic/pragma.cpp}
+\subsection{Default Code}
+\lstinputlisting[firstline=2]{1_Basic/default.cpp}
+\subsection{LambdaCompare}
+\lstinputlisting[firstline=2]{1_Basic/lambda_cmp.cpp}
 \section{Graph}
-	\subsection{2SAT/SCC}
-	\lstinputlisting[firstline=2]{2_Graph/2SAT.cpp}
-	\subsection{BCC Vertex}
-	\lstinputlisting[firstline=2]{2_Graph/BCC_Vertex.cpp}
-	\subsection{BCC Edge}
-	\lstinputlisting[firstline=2]{2_Graph/BCC_Edge.cpp}
-	\subsection{VirtualTree}
-	\lstinputlisting[firstline=2]{2_Graph/Virtual_Tree.cpp}
-	\subsection{MinimumMeanCycle}
-	\lstinputlisting[firstline=1]{2_Graph/MinimumMeanCycle.cpp}
-	\subsection{MaximumCliqueDyn}
-	\lstinputlisting[firstline=2]{2_Graph/Maximum_Clique_Dyn.cpp}
-	\subsection{MinimumSteinerTree}
-	\lstinputlisting[firstline=2]{2_Graph/MinimumSteinerTree.cpp}
-	\subsection{DominatorTree}
-	\lstinputlisting[firstline=2]{2_Graph/Dominator_Tree.cpp}
-	\subsection{DMST(slow)}
-	\lstinputlisting[firstline=2]{2_Graph/Minimum_Arborescence.cpp}
-	\subsection{DMST}
-	\lstinputlisting[firstline=2]{2_Graph/DMST.cpp}
-	\subsection{VizingTheorem}
-	\lstinputlisting[firstline=2]{2_Graph/Vizing.cpp}
-	\subsection{MinimumCliqueCover}
-	\lstinputlisting[firstline=3]{2_Graph/Minimum_Clique_Cover.cpp}
-	\subsection{CountMaximalClique}
-	\lstinputlisting[firstline=2]{2_Graph/NumberofMaximalClique.cpp}
-	\subsection{Theorems}
-	\input{2_Graph/graph.tex}
+\subsection{2SAT/SCC}
+\lstinputlisting[firstline=2]{2_Graph/2SAT.cpp}
+\subsection{BCC Vertex}
+\lstinputlisting[firstline=2]{2_Graph/BCC_Vertex.cpp}
+\subsection{BCC Edge}
+\lstinputlisting[firstline=2]{2_Graph/BCC_Edge.cpp}
+\subsection{VirtualTree}
+\lstinputlisting[firstline=2]{2_Graph/Virtual_Tree.cpp}
+\subsection{MinimumMeanCycle}
+\lstinputlisting[firstline=1]{2_Graph/MinimumMeanCycle.cpp}
+\subsection{MaximumCliqueDyn}
+\lstinputlisting[firstline=2]{2_Graph/Maximum_Clique_Dyn.cpp}
+\subsection{MinimumSteinerTree}
+\lstinputlisting[firstline=2]{2_Graph/MinimumSteinerTree.cpp}
+\subsection{DominatorTree}
+\lstinputlisting[firstline=2]{2_Graph/Dominator_Tree.cpp}
+\subsection{DMST(slow)}
+\lstinputlisting[firstline=2]{2_Graph/Minimum_Arborescence.cpp}
+\subsection{DMST}
+\lstinputlisting[firstline=2]{2_Graph/DMST.cpp}
+\subsection{VizingTheorem}
+\lstinputlisting[firstline=2]{2_Graph/Vizing.cpp}
+\subsection{MinimumCliqueCover}
+\lstinputlisting[firstline=3]{2_Graph/Minimum_Clique_Cover.cpp}
+\subsection{CountMaximalClique}
+\lstinputlisting[firstline=2]{2_Graph/NumberofMaximalClique.cpp}
+\subsection{Theorems}
+\input{2_Graph/graph.tex}
 \section{Flow-Matching}
-	\subsection{HopcroftKarp}
-	\lstinputlisting[firstline=2]{4_Flow_Matching/Hopcroft-Karp.cpp}
-	\subsection{KM}
-	\lstinputlisting[firstline=2]{4_Flow_Matching/Kuhn_Munkres.cpp}
-	\subsection{MCMF}
-	\lstinputlisting[firstline=2]{4_Flow_Matching/MincostMaxflow_dijkstra.cpp}
-	\subsection{GeneralGraphMatching}
-	\lstinputlisting[firstline=2]{4_Flow_Matching/Maximum_Simple_Graph_Matching.cpp}
-	\subsection{MaxWeightMaching}
-	\lstinputlisting[firstline=2]{4_Flow_Matching/Maximum_Weight_Matching.cpp}
-	\subsection{GlobalMinCut}
-	\lstinputlisting[firstline=2]{4_Flow_Matching/SW-mincut.cpp}
-	\subsection{BoundedFlow(Dinic)}
-	\lstinputlisting[firstline=2]{4_Flow_Matching/BoundedFlow.cpp}
-	\subsection{GomoryHuTree}
-	\lstinputlisting[firstline=2]{4_Flow_Matching/Gomory_Hu_tree.cpp}
-	\subsection{MinCostCirculation}
-	\lstinputlisting[firstline=2]{4_Flow_Matching/MinCostCirculation.cpp}
-	\subsection{FlowModelsBuilding}
-	\input{4_Flow_Matching/Model.tex}
+\subsection{HopcroftKarp}
+\lstinputlisting[firstline=2]{4_Flow_Matching/Hopcroft-Karp.cpp}
+\subsection{KM}
+\lstinputlisting[firstline=2]{4_Flow_Matching/Kuhn_Munkres.cpp}
+\subsection{MCMF}
+\lstinputlisting[firstline=2]{4_Flow_Matching/MincostMaxflow_dijkstra.cpp}
+\subsection{GeneralGraphMatching}
+\lstinputlisting[firstline=2]{4_Flow_Matching/Maximum_Simple_Graph_Matching.cpp}
+\subsection{MaxWeightMaching}
+\lstinputlisting[firstline=2]{4_Flow_Matching/Maximum_Weight_Matching.cpp}
+\subsection{GlobalMinCut}
+\lstinputlisting[firstline=2]{4_Flow_Matching/SW-mincut.cpp}
+\subsection{BoundedFlow(Dinic)}
+\lstinputlisting[firstline=2]{4_Flow_Matching/BoundedFlow.cpp}
+\subsection{GomoryHuTree}
+\lstinputlisting[firstline=2]{4_Flow_Matching/Gomory_Hu_tree.cpp}
+\subsection{MinCostCirculation}
+\lstinputlisting[firstline=2]{4_Flow_Matching/MinCostCirculation.cpp}
+\subsection{FlowModelsBuilding}
+\input{4_Flow_Matching/Model.tex}
 \section{Data Struture}
-	\subsection{Treap}
-	\lstinputlisting[firstline=2]{3_Data_Structure/Treap.cpp}
-	\subsection{LinkCutTree}
-	\lstinputlisting[firstline=2]{3_Data_Structure/link_cut_tree.cpp}
-	\subsection{Treap}
-	\lstinputlisting[firstline=2]{3_Data_Structure/Treap.cpp}
-	\subsection{CentroidDecomposition}
-	\lstinputlisting[firstline=2]{3_Data_Structure/Centroid_Decomposition.cpp}
-	\subsection{HeavylightDecomposition}
-	\lstinputlisting[firstline=2]{3_Data_Structure/Heavy_light_Decomposition.cpp}
+\subsection{Treap}
+\lstinputlisting[firstline=2]{3_Data_Structure/Treap.cpp}
+\subsection{LinkCutTree}
+\lstinputlisting[firstline=2]{3_Data_Structure/link_cut_tree.cpp}
+\subsection{Treap}
+\lstinputlisting[firstline=2]{3_Data_Structure/Treap.cpp}
+\subsection{CentroidDecomposition}
+\lstinputlisting[firstline=2]{3_Data_Structure/Centroid_Decomposition.cpp}
+\subsection{HeavylightDecomposition}
+\lstinputlisting[firstline=2]{3_Data_Structure/Heavy_light_Decomposition.cpp}
 \section{String}
-	\subsection{KMP}
-	\lstinputlisting[firstline=2]{5_String/KMP.cpp}
-	\subsection{Z}
-	\lstinputlisting[firstline=2]{5_String/Z-value.cpp}
-	\subsection{Manacher}
-	\lstinputlisting[firstline=2]{5_String/Manacher.cpp}
-	\subsection{SuffixArray}
-	\lstinputlisting[firstline=2]{5_String/Suffix_Array.cpp}
-	\subsection{SAIS}
-	\lstinputlisting[firstline=2]{5_String/SAIS.cpp}
-	\subsection{ACAutomaton}
-	\lstinputlisting[firstline=2]{5_String/Aho-Corasick_Automatan.cpp}
-	\subsection{MinRotation}
-	\lstinputlisting[firstline=2]{5_String/Smallest_Rotation.cpp}
-	\subsection{ExtSAM}
-	\lstinputlisting[firstline=2]{5_String/exSAM.cpp}
-	\subsection{PalindromeTree}
-	\lstinputlisting[firstline=2]{5_String/PalTree.cpp}
+\subsection{KMP}
+\lstinputlisting[firstline=2]{5_String/KMP.cpp}
+\subsection{Z}
+\lstinputlisting[firstline=2]{5_String/Z-value.cpp}
+\subsection{Manacher}
+\lstinputlisting[firstline=2]{5_String/Manacher.cpp}
+\subsection{SuffixArray}
+\lstinputlisting[firstline=2]{5_String/Suffix_Array.cpp}
+\subsection{SAIS}
+\lstinputlisting[firstline=2]{5_String/SAIS.cpp}
+\subsection{ACAutomaton}
+\lstinputlisting[firstline=2]{5_String/Aho-Corasick_Automatan.cpp}
+\subsection{MinRotation}
+\lstinputlisting[firstline=2]{5_String/Smallest_Rotation.cpp}
+\subsection{ExtSAM}
+\lstinputlisting[firstline=2]{5_String/exSAM.cpp}
+\subsection{PalindromeTree}
+\lstinputlisting[firstline=2]{5_String/PalTree.cpp}
 \section{Number Theory}
-	\subsection{Primes}
-	\input{6_Math/Primes.tex}
-	\subsection{ExtGCD}
-	\lstinputlisting[firstline=2]{6_Math/ExtGCD.cpp}
-	\subsection{FloorCeil}
-	\lstinputlisting[firstline=2]{6_Math/floor_ceil.cpp}
-	\subsection{FloorSum}
-	\input{6_Math/FloorSum.tex}
-	\lstinputlisting[firstline=2]{6_Math/FloorSum.cpp}
-	\subsection{MillerRabin}
-	\lstinputlisting[firstline=2]{6_Math/Miller_Rabin.cpp}
-	\subsection{PollardRho}
-	\lstinputlisting[firstline=2]{6_Math/Pollard_Rho.cpp}
-	\subsection{Fraction}
-	\lstinputlisting[firstline=2]{6_Math/Fraction.cpp}
-	\subsection{ChineseRemainder}
-	\lstinputlisting[firstline=2]{6_Math/chineseRemainder.cpp}
-	\subsection{FactorialMod$p^k$}
-	\lstinputlisting[firstline=2]{6_Math/fac_no_p.cpp}
-	\subsection{QuadraticResidue}
-	\lstinputlisting[firstline=2]{6_Math/QuadraticResidue.cpp}
-	\subsection{MeisselLehmer}
-	\lstinputlisting[firstline=2]{6_Math/PiCount.cpp}
-	\subsection{DiscreteLog}
-	\lstinputlisting[firstline=2]{6_Math/DiscreteLog.cpp}
-	\subsection{Theorems}
-	\input{6_Math/Theorem.tex}
-	\subsection{Estimation}
-	\input{6_Math/Estimation.tex}
-	\subsection{Numbers}
-	\input{6_Math/numbers.tex}
-	\subsection{GeneratingFunctions}
-	\input{6_Math/Generating_function.tex}
+\subsection{Primes}
+\input{6_Math/Primes.tex}
+\subsection{ExtGCD}
+\lstinputlisting[firstline=2]{6_Math/ExtGCD.cpp}
+\subsection{FloorCeil}
+\lstinputlisting[firstline=2]{6_Math/floor_ceil.cpp}
+\subsection{FloorSum}
+\input{6_Math/FloorSum.tex}
+\lstinputlisting[firstline=2]{6_Math/FloorSum.cpp}
+\subsection{MillerRabin}
+\lstinputlisting[firstline=2]{6_Math/Miller_Rabin.cpp}
+\subsection{PollardRho}
+\lstinputlisting[firstline=2]{6_Math/Pollard_Rho.cpp}
+\subsection{Fraction}
+\lstinputlisting[firstline=2]{6_Math/Fraction.cpp}
+\subsection{ChineseRemainder}
+\lstinputlisting[firstline=2]{6_Math/chineseRemainder.cpp}
+\subsection{FactorialMod$p^k$}
+\lstinputlisting[firstline=2]{6_Math/fac_no_p.cpp}
+\subsection{QuadraticResidue}
+\lstinputlisting[firstline=2]{6_Math/QuadraticResidue.cpp}
+\subsection{MeisselLehmer}
+\lstinputlisting[firstline=2]{6_Math/PiCount.cpp}
+\subsection{DiscreteLog}
+\lstinputlisting[firstline=2]{6_Math/DiscreteLog.cpp}
+\subsection{Theorems}
+\input{6_Math/Theorem.tex}
+\subsection{Estimation}
+\input{6_Math/Estimation.tex}
+\subsection{Numbers}
+\input{6_Math/numbers.tex}
+\subsection{GeneratingFunctions}
+\input{6_Math/Generating_function.tex}
 \section{Linear Algebra}
-	\subsection{GuassianElimination}
-	\lstinputlisting[firstline=2]{6_Math/Simultaneous_Equations.cpp}
-	\subsection{BerlekampMassey}
-	\lstinputlisting[firstline=2]{6_Math/Berlekamp-Massey.cpp}
-	\subsection{Simplex}
-	\input{6_Math/SimplexConstruction.tex}
-	\lstinputlisting[firstline=2]{6_Math/Simplex.cpp}
+\subsection{GaussianElimination}
+\lstinputlisting[firstline=2]{6_Math/Simultaneous_Equations.cpp}
+\subsection{BerlekampMassey}
+\lstinputlisting[firstline=2]{6_Math/Berlekamp-Massey.cpp}
+\subsection{Simplex}
+\input{6_Math/SimplexConstruction.tex}
+\lstinputlisting[firstline=2]{6_Math/Simplex.cpp}
 \section{Polynomials}
-	\subsection{NTT (FFT)}
-	\input{7_Polynomial/NTTPrimes.tex}
-	\lstinputlisting[firstline=2]{7_Polynomial/NTT.cpp}
-	\subsection{FHWT}
-	\lstinputlisting[firstline=2]{7_Polynomial/Fast_Walsh_Transform.cpp}
-	\subsection{PolynomialOperations}
-	\lstinputlisting[firstline=2]{7_Polynomial/Polynomial_Operation.cpp}
-	\subsection{NewtonMethod+MiscGF}
-	\input{7_Polynomial/Newton.tex}
+\subsection{NTT (FFT)}
+\input{7_Polynomial/NTTPrimes.tex}
+\lstinputlisting[firstline=2]{7_Polynomial/NTT.cpp}
+\subsection{FHWT}
+\lstinputlisting[firstline=2]{7_Polynomial/Fast_Walsh_Transform.cpp}
+\subsection{PolynomialOperations}
+\lstinputlisting[firstline=2]{7_Polynomial/Polynomial_Operation.cpp}
+\subsection{NewtonMethod+MiscGF}
+\input{7_Polynomial/Newton.tex}
 \section{Geometry}
-	\subsection{Basic}
-	\lstinputlisting[firstline=2]{8_Geometry/GeometryDefault.cpp}
-	\subsection{ConvexHull}
-	\lstinputlisting[firstline=2]{8_Geometry/Convex_hull.cpp}
-	\subsection{SortByAngle}
-	\lstinputlisting[firstline=2]{8_Geometry/Polar_Angle_Sort.cpp}
-	\subsection{Formulas}
-	\input{8_Geometry/Formulas.tex}
-	\subsection{TriangleHearts}
-	\lstinputlisting[firstline=2]{8_Geometry/Heart.cpp}
-	\subsection{PointSegmentDist}
-	\lstinputlisting[firstline=2]{8_Geometry/PointSegDist.cpp}
-	\subsection{PointInCircle}
-	\lstinputlisting[firstline=2]{8_Geometry/point_in_circle.cpp}
-	\subsection{PointInConvex}
-	\lstinputlisting[firstline=2]{8_Geometry/PointInConvex.cpp}
-	\subsection{PointTangentConvex}
-	\lstinputlisting[firstline=2]{8_Geometry/TangentPointToHull.cpp}
-	\subsection{CircTangentCirc}
-	\lstinputlisting[firstline=2]{8_Geometry/Tangent_line_of_two_circles.cpp}
-	\subsection{LineCircleIntersect}
-	\lstinputlisting[firstline=2]{8_Geometry/Intersection_of_line_and_circle.cpp}
-	\subsection{LineConvexIntersect}
-	\lstinputlisting[firstline=2]{8_Geometry/Intersection_of_line_and_convex.cpp}
-	\subsection{CircIntersectCirc}
-	\lstinputlisting[firstline=2]{8_Geometry/Intersection_of_two_circles.cpp}
-	\subsection{PolyIntersectCirc}
-	\lstinputlisting[firstline=2]{8_Geometry/Intersection_of_polygon_and_circle.cpp}
-	\subsection{PolyUnion}
-	\lstinputlisting[firstline=2]{8_Geometry/PolyUnion.cpp}
-	\subsection{MinkowskiSum}
-	\lstinputlisting[firstline=2]{8_Geometry/Minkowski_Sum.cpp}
-	\subsection{MinMaxEnclosingRect}
-	\lstinputlisting[firstline=2]{8_Geometry/minMaxEnclosingRectangle.cpp}
-	\subsection{MinEnclosingCircle}
-	\lstinputlisting[firstline=3]{8_Geometry/Minimum_Enclosing_Circle.cpp}
-	\subsection{CircleCover}
-	\lstinputlisting[firstline=3]{8_Geometry/CircleCover.cpp}
-	\subsection{LineCmp}
-	\lstinputlisting[firstline=2]{8_Geometry/LineCmp.cpp}
-	\subsection{Trapezoidalization}
-	\lstinputlisting[firstline=2]{8_Geometry/Trapezoidalization.cpp}
-	\subsection{HalfPlaneIntersect}
-	\lstinputlisting[firstline=3]{8_Geometry/Half_plane_intersection.cpp}
-	\subsection{RotatingSweepLine}
-	\lstinputlisting[firstline=2]{8_Geometry/rotatingSweepLine.cpp}
-	\subsection{DelaunayTriangulation}
-	\lstinputlisting[firstline=3]{8_Geometry/DelaunayTriangulation.cpp}
-	\subsection{VonoroiDiagram}
-	\lstinputlisting[firstline=3]{8_Geometry/Triangulation_Vonoroi.cpp}
+\subsection{Basic}
+\lstinputlisting[firstline=2]{8_Geometry/GeometryDefault.cpp}
+\subsection{ConvexHull}
+\lstinputlisting[firstline=2]{8_Geometry/Convex_hull.cpp}
+\subsection{SortByAngle}
+\lstinputlisting[firstline=2]{8_Geometry/Polar_Angle_Sort.cpp}
+\subsection{Formulas}
+\input{8_Geometry/Formulas.tex}
+\subsection{TriangleHearts}
+\lstinputlisting[firstline=2]{8_Geometry/Heart.cpp}
+\subsection{PointSegmentDist}
+\lstinputlisting[firstline=2]{8_Geometry/PointSegDist.cpp}
+\subsection{PointInCircle}
+\lstinputlisting[firstline=2]{8_Geometry/point_in_circle.cpp}
+\subsection{PointInConvex}
+\lstinputlisting[firstline=2]{8_Geometry/PointInConvex.cpp}
+\subsection{PointTangentConvex}
+\lstinputlisting[firstline=2]{8_Geometry/TangentPointToHull.cpp}
+\subsection{CircTangentCirc}
+\lstinputlisting[firstline=2]{8_Geometry/Tangent_line_of_two_circles.cpp}
+\subsection{LineCircleIntersect}
+\lstinputlisting[firstline=2]{8_Geometry/Intersection_of_line_and_circle.cpp}
+\subsection{LineConvexIntersect}
+\lstinputlisting[firstline=2]{8_Geometry/Intersection_of_line_and_convex.cpp}
+\subsection{CircIntersectCirc}
+\lstinputlisting[firstline=2]{8_Geometry/Intersection_of_two_circles.cpp}
+\subsection{PolyIntersectCirc}
+\lstinputlisting[firstline=2]{8_Geometry/Intersection_of_polygon_and_circle.cpp}
+\subsection{PolyUnion}
+\lstinputlisting[firstline=2]{8_Geometry/PolyUnion.cpp}
+\subsection{MinkowskiSum}
+\lstinputlisting[firstline=2]{8_Geometry/Minkowski_Sum.cpp}
+\subsection{MinMaxEnclosingRect}
+\lstinputlisting[firstline=2]{8_Geometry/minMaxEnclosingRectangle.cpp}
+\subsection{MinEnclosingCircle}
+\lstinputlisting[firstline=3]{8_Geometry/Minimum_Enclosing_Circle.cpp}
+\subsection{CircleCover}
+\lstinputlisting[firstline=3]{8_Geometry/CircleCover.cpp}
+\subsection{LineCmp}
+\lstinputlisting[firstline=2]{8_Geometry/LineCmp.cpp}
+\subsection{Trapezoidalization}
+\lstinputlisting[firstline=2]{8_Geometry/Trapezoidalization.cpp}
+\subsection{HalfPlaneIntersect}
+\lstinputlisting[firstline=3]{8_Geometry/Half_plane_intersection.cpp}
+\subsection{RotatingSweepLine}
+\lstinputlisting[firstline=2]{8_Geometry/rotatingSweepLine.cpp}
+\subsection{DelaunayTriangulation}
+\lstinputlisting[firstline=3]{8_Geometry/DelaunayTriangulation.cpp}
+\subsection{VonoroiDiagram}
+\lstinputlisting[firstline=3]{8_Geometry/Triangulation_Vonoroi.cpp}
 \section{Misc}
-	\subsection{MoAlgoWithModify}
-	\lstinputlisting[firstline=2]{9_Else/Mos_Algorithm_With_modification.cpp}
-	\subsection{MoAlgoOnTree}
-	\lstinputlisting[firstline=2]{9_Else/Mos_Algorithm_On_Tree.cpp}
-	\subsection{MoAlgoAdvanced}
-	\input{9_Else/Mos_Algorithm.tex}
-	\subsection{HilbertCurve}
-	\lstinputlisting[firstline=2]{9_Else/HilbertCurve.cpp}
-	\subsection{ManhattanMST}
-	\lstinputlisting[firstline=2]{9_Else/ManhattanMST.cpp}
-	\subsection{SternBrocotTree}
-	\input{9_Else/SBTree.tex}
-	\subsection{AllLCS}
-	\lstinputlisting[firstline=2]{9_Else/All_LCS.cpp}
-	\subsection{MatroidIntersection}
-	\input{9_Else/Matroid.tex}
-	\subsection{SimulatedAnnealing}
-	\lstinputlisting[firstline=2]{9_Else/SimulatedAnnealing.cpp}
-	\subsection{SMAWK}
-	\lstinputlisting[firstline=2]{9_Else/SMAWK.cpp}
-	\subsection{Python}
-	\lstinputlisting[firstline=1]{11_Python/misc.py}
-	\subsection{LineContainer}
-	\lstinputlisting[firstline=2]{9_Else/LineContainer.cpp}
+\subsection{MoAlgoWithModify}
+\lstinputlisting[firstline=2]{9_Else/Mos_Algorithm_With_modification.cpp}
+\subsection{MoAlgoOnTree}
+\lstinputlisting[firstline=2]{9_Else/Mos_Algorithm_On_Tree.cpp}
+\subsection{MoAlgoAdvanced}
+\input{9_Else/Mos_Algorithm.tex}
+\subsection{HilbertCurve}
+\lstinputlisting[firstline=2]{9_Else/HilbertCurve.cpp}
+\subsection{ManhattanMST}
+\lstinputlisting[firstline=2]{9_Else/ManhattanMST.cpp}
+\subsection{SternBrocotTree}
+\input{9_Else/SBTree.tex}
+\subsection{AllLCS}
+\lstinputlisting[firstline=2]{9_Else/All_LCS.cpp}
+\subsection{MatroidIntersection}
+\input{9_Else/Matroid.tex}
+\subsection{SimulatedAnnealing}
+\lstinputlisting[firstline=2]{9_Else/SimulatedAnnealing.cpp}
+\subsection{SMAWK}
+\lstinputlisting[firstline=2]{9_Else/SMAWK.cpp}
+\subsection{Python}
+\lstinputlisting[firstline=1]{11_Python/misc.py}
+\subsection{LineContainer}
+\lstinputlisting[firstline=2]{9_Else/LineContainer.cpp}
